<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="sp_input_reducer" Id="{7c773ba5-11e6-4c53-86be-40a0edacf78a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION sp_input_reducer : real
VAR_INPUT
	sp_auto: REAL;
	sp_manual: REAL;
	sp_tso: REAL;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[sp_input_reducer := 1;

IF GVL.WISNAM_PPC.REMOTE_MODE THEN
	sp_input_reducer := sp_tso;
END_IF


IF GVL.WISNAM_PPC.AUTO_MODE THEN
	IF sp_input_reducer > sp_auto THEN
		sp_input_reducer := sp_auto;
	END_IF
END_IF


IF GVL.WISNAM_PPC.MANUAL_MODE THEN
	IF sp_input_reducer > sp_manual THEN
		sp_input_reducer := sp_manual;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="sp_input_reducer">
      <LineId Id="50" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="34" Count="6" />
      <LineId Id="14" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>